--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,7 +66,20 @@ body {
   padding: 4px;
 }
 
+.py-15 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.px-15 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 // margin typography starts here
+.m-4{
+  margin: 4px;
+}
 
 .mt-10 {
   margin-top: 10px;
@@ -110,32 +123,21 @@ body {
   margin-bottom: 20px;
 }
 
+.mx-auto {
+  margin: 0 auto;
+}
 // width typography starts here
 
-.w-20 {
-  width: 20%;
-}
-
-.w-30 {
-  width: 30%;
-}
 .w-50 {
   width: 50%;
-}
-.w-75 {
-  width: 70%;
-}
-
-.w-80 {
-  width: 80%;
 }
 
 .w-100 {
   width: 100%;
 }
 
-.bg-white {
-  background-color: #fff;
+.max-w-1280 {
+  max-width: 1280px;
 }
 
 // layout typography starts here
@@ -171,26 +173,13 @@ body {
   justify-content: space-around;
 }
 
-.notifier-snackbar-success {
-  background-color: #4caf50;
-  color: #fff;
-}
-
-.notifier-snackbar-error {
-  background-color: #f44336;
-  color: #fff;
-}
-
-.notifier-snackbar-info {
-  background-color: #2196f3;
-  color: #fff;
-}
-
 .badge {
-  border-radius: 25px;
-  padding: 0px 5px;
-  font-size: 10px;
+  border-radius: 20px;
+  padding: 0px 8px;
+  font-size: 12px;
+  background-color: #8c7fe7;
   color: white;
+  margin: 2px;
 }
 
 .badge-common {
