adding movie info dialog, stepper, 505 error page and search functionality

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,8 +2,11 @@
   <div class="header">
     <div class="logo-title">Movies Hub</div>
     <div class="menu">
-      <div class="menu-item"><mat-icon>person</mat-icon>Theme</div>
-      <div class="menu-item"><mat-icon>logout</mat-icon> Logout</div>
+      <div class="menu-item" (click)="toggleTheme()">
+        <mat-icon *ngIf="!isLightTheme">wb_sunny</mat-icon>
+        <mat-icon *ngIf="isLightTheme"> highlight</mat-icon>
+      </div>
+      <div class="menu-item" (click)="logout()"><mat-icon>logout</mat-icon> Logout</div>
     </div>
   </div>
 </div>
