--- a/src/app/components/movie-card/movie-card.component.html
+++ b/src/app/components/movie-card/movie-card.component.html
@@ -1,19 +1,23 @@
 <div class="movieWrapper">
   <div class="movieImage">
-    <img alt="movie poster" />
+    <img alt="movie poster" [src]="getImageFromTitle(movie.title)" />
   </div>
   <div class="movieInfo">
     <div class="movieTitle">{{ movie.title }}</div>
     <div class="movieDescription">
-      {{ getShortText(movie.description, 75) }}
+      {{ getShortText(movie.description, 50) }}
     </div>
     <div class="movieGenres" *ngIf="movie.genres">
-        <div class="text-sm mr-4">Genres:</div>
-        <div class="genres">
-            <div *ngFor="let genre of getGenreArray(movie.genres)" class="badge mr-2">
-                {{ genre }}
-            </div>
+      <div class="text-sm mr-4">Genres:</div>
+      <div class="genres">
+        <div
+          *ngFor="let genre of getGenreArray(movie.genres)"
+          class="badge mr-2"
+        >
+          {{ genre }}
         </div>
+      </div>
     </div>
   </div>
+  <div class="details-button" (click)="openMovieDialog()">View Details</div>
 </div>
