--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,7 +7,8 @@
     align-items: center;
     width: 100%;
     padding: 0 20px;
-    background-color: #fff;
+    background-color: var(--page-background-secondary-color);
+    color: var(--page-text-primary-color);
     height: 60px;
     position: relative;
     max-width: 1280px;
@@ -15,7 +16,7 @@
     .logo-title {
       font-size: 30px;
       font-weight: 600;
-      color: #333;
+      color: var(--page-text-primary-color);
       font-family: "Lobster", cursive;
     }
     .menu {
@@ -31,6 +32,16 @@
         align-items: center;
         justify-content: center;
         cursor: pointer;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 414px) {
+  .wrapper {
+    .header {
+      .logo-title {
+        font-size: 24px;
       }
     }
   }
