--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -5,33 +5,38 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  color: var(--page-text-primary-color);
+  background-color: var(--page-background-secondary-color);
   border-radius: 10px;
   max-width: 250px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease-in-out;
-  margin: 10px;
+  // margin: 10px;
+  padding: 10px;
   &:hover {
     transform: scale(1.05);
   }
   .movieImage {
+    max-width: 150px;
     width: 100%;
-    height: 100%;
-    border-radius: 10px 10px 0 0;
-    object-fit: cover;
+    max-height: 150px;
+    border-radius: 50%;
+    overflow: hidden;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
   .movieInfo {
     width: 100%;
-    padding: 10px;
+    // padding: 10px;
     .movieTitle {
       font-size: 1.2rem;
       font-weight: 600;
+      margin-top: 10px;
       margin-bottom: 5px;
-    }
-    .movieYear {
-      font-size: 1rem;
-      font-weight: 400;
-      margin-bottom: 5px;
+      color: var(--page-text-secondary-color);
     }
     .movieDescription {
       font-size: 0.8rem;
@@ -41,16 +46,27 @@
     .movieGenres {
       font-size: 1rem;
       font-weight: 400;
-      margin-bottom: 5px;
       display: flex;
+      align-items: center;
     //   flex-direction: column;
-
       .genres {
-        margin: 2px;
+        margin: 5px;
         display: flex;
         flex-wrap: wrap;
         width: 100%;
       }
     }
+  }
+  .details-button{
+    width: 90%;
+    padding: 10px;
+    border: none;
+    background-color: var(--button-background-color);
+    color: var(--button-text-color);
+    font-size: 1rem;
+    border-radius: 5px;
+    text-align: center;
+    cursor: pointer;
+    margin-top: auto;
   }
 }
